--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
                         <i class="fa fa-map-marker-alt fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Visit Us</h5>
-                    <p class="text-secondary mb-0">123 Street, New York, USA</p>
+                    <p class="text-secondary mb-0">At. Konfodi Post. Ganoja (Devi) Tq. Bhatkuli Dist. Amravati</p>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -138,7 +138,7 @@
                         <i class="fa fa-envelope fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Email Us</h5>
-                    <p class="text-secondary mb-0">info@example.com</p>
+                    <p class="text-secondary mb-0">info@gymbuild.com</p>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -147,7 +147,7 @@
                         <i class="fa fa-phone fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Call Us</h5>
-                    <p class="text-secondary mb-0">+012 345 6789</p>
+                    <p class="text-secondary mb-0">+91 8888456789</p>
                 </div>
             </div>
         </div>
